--- a/Clones/Tela_de_login_da_Twitch/recuperacao_de_conta.css
+++ b/Clones/Tela_de_login_da_Twitch/recuperacao_de_conta.css
@@ -18,6 +18,7 @@ body{
     box-sizing: border-box;
     background-color: var(--background-body);
     color: #fff;
+    font-family: monospace;
 }
 
 header{
@@ -30,6 +31,7 @@ header .img{
     height: 20px;
     padding-left: 28px;
 }
+
 
 
 
