--- a/Clones/Tela_de_login_da_Twitch/Criar_conta/style.css
+++ b/Clones/Tela_de_login_da_Twitch/Criar_conta/style.css
@@ -37,7 +37,7 @@ form{
     align-items: flex-start;
     flex-flow: wrap column;
     width: 100%;
-    margin-top: 14px;
+    margin-top: 27px;
 }
 
 #name_password label, #data label, #telephone label{
@@ -46,7 +46,11 @@ form{
     float: left;
     display:inline;
     width: 100%;
-    margin-bottom: 8px;
+    margin-bottom: 5px;
+}
+
+#name .space_password , input{
+    margin-bottom: 20px;
 }
 
 #name_password input{
@@ -66,7 +70,11 @@ form > #data{
     display: flex;
     flex-flow: wrap row;
     width: 100%;    
-    margin: 37px 0px 35px;   
+    margin: 37px 0px 47px;   
+}
+
+#data label{
+    margin-bottom: 13px;
 }
 
 #data > select , #telephone > select{
@@ -78,24 +86,26 @@ form > #data{
 }
 
 #data >.height{
-    height: 43px;
+    height: 50px;
+    font-size: 21px;
+    padding-left: 7px;
 }
 
 #dia{
     flex-grow: 1;
-    margin-right: 10px;
+    margin-right: 15px;
 }
 
 #mes{
-    flex-grow: 2;
-    margin-right: 10px;
+    flex-grow: 4;
+    margin-right: 15px;
 }
 
 #ano{
     flex-grow: 1;
 }
 
-/* Número de Telefone */
+    /* Número de Telefone */
 
 #telephone {
     width: 100%;
@@ -107,16 +117,30 @@ form > #data{
 .phone-row {
     display: flex;
     gap: 10px; 
+    height: 44px;
 }
 
-#select_phone, input {
-    flex: 1; 
+#section_phone{
+    flex-grow: 2.3;
+    background-color: #18181b;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    color: #fff;
 }
+
+.phone-row > .phone{
+    flex-grow: 2;
+    background-color: #18181b;
+    border: 1px solid #fff;
+    height: 40px;
+    border-radius: 4px;
+} 
 
 .btn-email {
     align-self: flex-start; 
-    /* padding: 5px 10px;  */
-    font-family: monospace;
+    margin-top: 9px;
+    padding: 9px 14px; 
+    font-family:'Franklin Gothic Medium';
     font-weight: 600;
     color: #bf94ff;
     background-color: #18181b;
@@ -130,3 +154,53 @@ form > #data{
     border-radius: 4px;
 }
 
+    /* Texto */
+
+.texts , p{
+    font-size: 0.88rem;
+    font-weight: 300;
+    font-family:'Times New Roman', Times, serif;
+}
+
+.texts > p:first-child{
+    margin-bottom: 32px;
+}
+
+.texts > p >.link{
+    color: #bf94ff;
+}
+
+/* Ultimos Botões */
+
+.last_btns{
+    display: flex;
+    align-self: flex-start;
+    flex-flow: wrap column;
+    width: 100%;
+}
+
+.btn{
+    border: none;
+    border-radius: 4px;
+    padding: 12px 0px;
+    margin: 12px 0px 13px;
+    font-weight: 600;
+}
+
+.btn1{
+    background-color: #232328;
+    color: #63636a;
+    cursor:not-allowed;
+}
+
+.btn2{
+    background-color: #18181b;
+    color: #bf94ff;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.btn2:hover{
+    background-color: #7e7e7e;
+    color: #fff;
+}
