--- a/Clones/Tela_de_login_da_Twitch/Criar_conta/style.css
+++ b/Clones/Tela_de_login_da_Twitch/Criar_conta/style.css
@@ -49,6 +49,14 @@ form{
     margin-bottom: 5px;
 }
 
+#name, #password, #phone{
+    text-indent: 9px;
+}
+
+#name, #password, #phone:not(:focus) {
+    color: white; 
+}
+
 #name .space_password , input{
     margin-bottom: 20px;
 }
@@ -65,6 +73,8 @@ form{
 #name_password > .space_password{
     margin-top: 33px;
 }
+
+    /* Data de Nascimento */
 
 form > #data{
     display: flex;
@@ -105,6 +115,17 @@ form > #data{
     flex-grow: 1;
 }
 
+#name_password > input:focus{
+    outline: none; 
+    border-radius: 6px; 
+    border: #bf94ff 3px solid;
+    color: #f0f8ff;
+}
+
+#name_passwprd > #input{
+    padding-left: 27px;
+}
+
     /* Número de Telefone */
 
 #telephone {
@@ -126,14 +147,16 @@ form > #data{
     border: 1px solid #fff;
     border-radius: 4px;
     color: #fff;
+    padding-left: 7px;
 }
 
-.phone-row > .phone{
+.phone-row > #phone{
     flex-grow: 2;
     background-color: #18181b;
     border: 1px solid #fff;
     height: 40px;
     border-radius: 4px;
+    color: white;
 } 
 
 .btn-email {
