--- a/Clones/Tela_de_login_da_Twitch/Tela de Login/style.css
+++ b/Clones/Tela_de_login_da_Twitch/Tela de Login/style.css
@@ -84,7 +84,7 @@ form > input:focus{
 
 form > a{
     color: var(--color-link);
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     font-weight: 600;
     display: block;
     margin-top: -25px;
@@ -96,8 +96,8 @@ form > .btn{
     background-color: #9147ff;
     color: #fff;
     font-weight: bold;
-    font-size: 1rem;
-    padding: 13px 0px;
+    font-size: 0.8rem;
+    padding: 10px 0px;
     border-radius: 13px;
     border: none;
     margin: 30px 0px;
@@ -111,12 +111,14 @@ form > .btn{
 
 form > .btn:nth-of-type(2) {
     background-color: #18181b; 
-    color: #bf94ff; 
-    border: none; 
-    padding: 10px 20px;
-    cursor: pointer;
     transition:linear 0.4s;
     cursor: pointer;
+}
+
+form .link_btn{
+    color: #bf94ff; 
+    text-decoration: none;
+    font-size: 0.8rem;
 }
 
 form > .btn:nth-of-type(2):hover{
