--- a/Clones/Tela_de_login_da_Twitch/1_Tela de Login/style.css
+++ b/Clones/Tela_de_login_da_Twitch/1_Tela de Login/style.css
@@ -1,4 +1,4 @@
-html, body{
+html, body {
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
@@ -6,7 +6,7 @@ html, body{
     font-family: sans-serif;
 }
 
-:root{
+:root {
 
     --background-container : #18181b;
 
@@ -17,9 +17,7 @@ html, body{
     --border-input :#bf94ff;
 
     --color-link: #bf94ff;
-
 }
-
 
 .container{
     background-color: var(--background-container);
@@ -30,15 +28,14 @@ html, body{
     flex-flow: wrap column;
 }
 
-.s1{
-    /* background-color: blue; */
+.s1 {
     margin-top: 24px ;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.s1 > .tittle{
+.s1 > .tittle {
     font-size: 1.5rem;
 }
 
@@ -48,7 +45,7 @@ html, body{
     margin-right: 13px;
 }
 
-form{
+form {
     display: block;
     width: 90%;
     margin: auto;
@@ -56,15 +53,14 @@ form{
     line-height: 40px;
 }
 
-form > label{
+form > label {
     display: block;
     font-weight: bold;
     font-size: 0.9rem;
     margin-bottom: 6px;
 }
 
-
-form > input{
+form > input {
     border-radius: 6px;
     border-bottom: transparent;
     width: 100%;
@@ -74,7 +70,7 @@ form > input{
     background-color: #18181b;
 }
 
-form > input:focus{
+form > input:focus {
     outline: none; 
     border-radius: 6px; 
     border: #bf94ff 3px solid;
@@ -82,7 +78,11 @@ form > input:focus{
     color: aliceblue;
 }
 
-form > a{
+form > input:not(:focus) {
+    color: white;
+}
+
+form > a {
     color: var(--color-link);
     font-size: 0.8rem;
     font-weight: 600;
@@ -90,7 +90,7 @@ form > a{
     margin-top: -25px;
 }
 
-form > .btn{
+form > .btn {
     display: block;
     width: 100%;
     background-color: #9147ff;
@@ -105,7 +105,7 @@ form > .btn{
     cursor: pointer;
 }
 
-.btn:hover{
+.btn:hover {
     background-color: var(--background-btn);
 }
 
@@ -115,14 +115,38 @@ form > .btn:nth-of-type(2) {
     cursor: pointer;
 }
 
-form .link_btn{
+form .link_btn {
     color: #bf94ff; 
     text-decoration: none;
     font-size: 0.8rem;
 }
 
-form > .btn:nth-of-type(2):hover{
+form > .btn:nth-of-type(2):hover {
     background-color: #2c2b2b;
 }
 
 
+@media (max-width: 768px) {
+    
+    .container {
+        width: 600px;
+        padding: 30px 40px;
+    }
+
+    .s1 > .tittle {
+        font-size: 30px;
+    }
+
+    form > label {
+        font-size: 21px;
+    }
+
+}
+
+@media (max-width: 480px) {
+
+    .container {
+      width: 100%;
+    }
+
+}
