--- a/Clones/Tela_de_login_da_Twitch/2_Problema_ao_iniciar_sessao/style.css
+++ b/Clones/Tela_de_login_da_Twitch/2_Problema_ao_iniciar_sessao/style.css
@@ -1,5 +1,4 @@
-:root{
-
+:root {
     --background-header : #18181b;
 
     --background-body: #0e0e10;
@@ -9,10 +8,11 @@
     --border-input :#bf94ff;
 
     --color-link: #bf94ff;
-
 }
 
-body{
+/* Início  */
+
+body {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
@@ -21,18 +21,20 @@ body{
     font-family: monospace;
 }
 
-header{
+header {
     background-color: var(--background-header);
     padding: 18px 0px;
 }
 
-header .img{
+header .img {
     width: 20px;
     height: 20px;
     padding-left: 28px;
 }
 
-.container{
+/* Geral */
+
+.container {
     display: flex;
     flex-flow: wrap column;
     width: 760px;
@@ -42,30 +44,24 @@ header .img{
     word-spacing: -7px;
 }
 
-.text-select, .form{
-    /* background-color: grey; */
-}
-
-.text-select > .tittle{
+.text-select > .tittle {
     font-size: 1.5rem;
     margin-bottom: -20px;
 }
 
-.text-select > .sub-tittle{
+.text-select > .sub-tittle {
     font-size: 1.2rem;
 }
 
-.form{
+/* Formulário */
 
-}
-
-.form > .insert{
+.form > .insert { 
     font-size: 0.86rem; 
     display: block;   
     margin: 0px auto 18px;
 }
 
-#country_code, .input_email{
+#country_code, .input_email {
     padding: 2px;
     border: 1px solid #919191;
     border-radius: 3px;
@@ -73,14 +69,14 @@ header .img{
     color: #fff;
 }
 
-#country_code:focus{
+#country_code:focus {
     outline: none; 
     border-radius: 6px; 
     border: #bf94ff 3px solid;
     padding: 8px;
 }
 
-.input_email:focus{
+.input_email:focus {
     outline: none; 
     border-radius: 6px; 
     border: #bf94ff 3px solid;
@@ -88,32 +84,33 @@ header .img{
     background-color: #0e0e10;
 }
 
-.btns{
+/* Selecionar País */
+
+.btns {
     display: flex;
     gap: 0px 12px;
     height: 52px;
 }
 
-#country_code{
+#country_code {
     flex-grow: 1;
 }
 
-.input_email{
+.input_email {
     flex-grow: 8;
 }
 
-.form_text{
+.form_text {
     font-weight:400;
     font-family: serif;
     word-spacing: normal;
 }
 
-.btn-group{
-    /* background-color: red; */
+.btn-group {
     padding: 45px 0px;
 }
 
-.btn-group > .btn{
+.btn-group > .btn {
     width: 100%;
     border: none;
     border-radius: 10px;
@@ -124,24 +121,24 @@ header .img{
     cursor: pointer;
 }
 
-.btn-group > .primary{
+.btn-group > .primary {
     background-color: #9147ff;
     transition: ease 0.6s;
 }
 
-.btn-group .primary:hover{
+.btn-group .primary:hover {
     background-color: #bf94ff;
     transition: ease 0.6s;
 }
 
-.divider{
+.divider {
     display: flex; 
     justify-content: center; 
     align-items: center; 
     margin: 40px 0px;
 }
 
-.divider span{
+.divider span {
     flex: 1; 
     border: none; 
     margin: 0;
@@ -155,30 +152,85 @@ header .img{
     margin: 0; 
 }
 
-.btn-group > .secundary{
+.btn-group > .secundary {
     background-color: #28282e;
 }
 
-.fa-regular{
+.fa-regular {
     margin-right: 4px;
 }
 
-.btn-group .secundary:hover{
+.btn-group .secundary:hover {
     background-color: #36363d;
     transition: ease 0.6s;
     
 }
 
-.btn-group, .support-link{
+.btn-group, .support-link {
     text-decoration: none;
     color: #bf94ff;
 }
 
-.btn-group, .support-link:hover{
+.btn-group, .support-link:hover {
      text-decoration: underline;
 }
 
+/* Responsividade */
 
+@media (max-width: 768px) {
+    
+    .container {
+        width: 600px;
+        padding: 30px 70px;
+    }
+
+    .text-select > .tittle {
+        font-size: 35px;
+    }
+
+    .text-select > .sub-tittle{
+        font-size: 23px;
+        margin-top: 29px;
+    }
+
+    .form > .insert{
+        font-size: 20px;
+    }
+
+    form > label {
+        font-size: 21px;
+    }
+
+}
+
+@media (max-width: 480px) {
+
+    .container {
+        width: 400px;
+        padding: 10px 40px;
+    }
+
+    .btns{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 65px;
+    }
+
+    .btns > #country_code{
+        margin-bottom: 10px;
+    }
+
+    .btn-group > .btn{
+        font-size: 18px;
+    }
+
+    .support-link{
+        word-spacing: 1px;
+        font-size: 19px;
+        float: left;
+    }
+
+}
 
 
 
