--- a/Clones/Tela_de_login_da_Twitch/3_Criar_conta/style.css
+++ b/Clones/Tela_de_login_da_Twitch/3_Criar_conta/style.css
@@ -7,6 +7,8 @@ body {
     color: #fff;
 }
 
+/* Geral */
+
 .container {
     background-color: #18181b;
     width: 700px;
@@ -30,6 +32,8 @@ body {
 .main_content h1 {
     font-size: 1.4rem;
 }
+
+/* Formulario / Dados */
 
 form {
     display: flex;
@@ -228,4 +232,42 @@ form > #data{
 .btn2:hover {
     background-color: #7e7e7e;
     color: #fff;
+}
+
+    /* Responsividade */
+
+@media (min-width : 480px) and (max-width : 768px){
+
+    .container{
+        width: 650px;
+        padding: 20px 80px;
+    }
+
+    form > #data{
+        display: flex;
+        flex-flow: wrap column;
+    }
+
+    form > #data > .height{
+        width: 100%;
+        margin-bottom: 13px;
+    }
+
+    #telephone > .phone-row {
+        display: flex;
+        flex-direction:  column;
+    }
+
+    #telephone > .phone-row > select{
+        padding: 10px 0px;
+    }
+
+    #telephone > .phone-row > input {
+        padding: 10px 0px;
+    }
+
+    #telephone > .btn-email{
+        margin-top: 90px;
+    }
+
 }
